src/app/components/test.component/test.component.scss
#wrapper {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    margin: 0;
    padding: 0;
}
#timeline-holder {
    width: 98%;
    height: 98%;
    position: relative;
}

#options {
    position: absolute;
    top: 20%;
    left: 2em;
    z-index: 1000;
}

#brush-holder {
    position: absolute;
    top: 80%;
    z-index: 1000;
}

// #map-holder {
//     width: 100%;
//     height: 40%;

//     position: relative;
// }

#tooltip {
    position: absolute;
    top: 0px;
    left: 0px;
    width: auto;
    height: auto;
    background: white;
    opacity: 0;
    padding: .5em;
    z-index: 1000;
}

::ng-deep .zoom {
    cursor: move;
    fill: none;
    pointer-events: all;
}

::ng-deep #brush-holder svg {
    overflow: visible;
}

::ng-deep .reorder {
    cursor: grabbing;
}

::ng-deep #brush-holder g > .tick {
    font-size: 14px;
}

::ng-deep .after-death {
    stroke: #efefef;   
}

::ng-deep .circle-axis {
    fill: none;
    // stroke: #efefef;
}

::ng-deep #arc-selection {
    opacity: .25;
}

#date-extent {
    position: absolute;
    top: 4em;
    left: 1em;
    display: flex;
    flex-direction: row;
    user-select: none;
}

#date-extent h3 {
    opacity: .25;
}

#role-holder {
    position: absolute;
    top: 0em;
    left: 0em;
    z-index: 1000;
}

